added multi slots insertions